finish up Spec migration, code refactor, gradle 9.1, build changes